--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="./src/styles/normalize.css">
-  <link rel="stylesheet" href="./src/styles/style.scss">
+  <link rel="stylesheet" href="./src/styles/style.css">
   <link rel="stylesheet" href="./src/vendor/nouislider/nouislider.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>Кекстаграм</title>
@@ -48,7 +48,7 @@
                   </fieldset>
 
                   <div class="img-upload__preview">
-                    <img class ="img-upload__photo" src="/img/upload-default-image.jpg" alt="Предварительный просмотр фотографии">
+                    <img class ="img-upload__photo" src="./src/img/upload-default-image.jpg" alt="Предварительный просмотр фотографии">
                   </div>
 
                   <fieldset class="img-upload__effect-level  effect-level">
@@ -134,12 +134,12 @@
       <div class="big-picture__preview">
 
         <div class="big-picture__img">
-          <img src="/img/logo-background-3.jpg" alt="Девушка в купальнике" width="600" height="600">
+          <img src="./src/img/logo-background-3.jpg" alt="Девушка в купальнике" width="600" height="600">
         </div>
 
         <div class="big-picture__social  social">
           <div class="social__header">
-            <img class="social__picture" src="/img/avatar-1.svg" alt="Аватар автора фотографии" width="35" height="35">
+            <img class="social__picture" src="./src/img/avatar-1.svg" alt="Аватар автора фотографии" width="35" height="35">
             <p class="social__caption">Тестим новую камеру!</p>
             <p class="social__likes">Нравится <span class="likes-count">356</span></p>
           </div>
@@ -151,7 +151,7 @@
           <button type="button" class="social__comments-loader  comments-loader">Загрузить еще</button>
 
           <div class="social__footer">
-            <img class="social__picture" src="/img/avatar-6.svg" alt="Аватар комментатора фотографии" width="35"
+            <img class="social__picture" src="./src/img/avatar-6.svg" alt="Аватар комментатора фотографии" width="35"
               height="35">
             <input type="text" class="social__footer-text" placeholder="Ваш комментарий...">
             <button type="button" class="social__footer-btn" name="button">Отправить</button>
@@ -167,7 +167,7 @@
     <div class="page-footer__wrapper">
       <div class="page-footer__copyright  copyright">
         <a class="copyright__link  copyright__link--image" href="https://htmlacademy.ru/intensive/javascript"><img
-            src="/img/htmla-logo.svg" width="130" height="45" alt="HTML Academy"></a>
+            src="./src/img/htmla-logo.svg" width="130" height="45" alt="HTML Academy"></a>
         <p>Автор <a class="copyright__link  copyright__link--text"
             href="https://github.com/Fatal999">Fatal999</a></p>
       </div>
